2003-10-13  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: fixed panic in http_something_accepted(...) that NULL was
      passed to octstr_case_compare(...).

2003-10-13  Alexander Malysh  <a.malysh@centrium.de>
    * gw/sms.c: restore old DCS behaviour.

2003-10-13  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smsc_http.c: changed 'dlrurl' -> 'dlr-url' , 
      'dlrmask' -> 'dlr-mask' in order to reflect changes made
      by Bruno for smsbox. Thanks to adi <adi@imt.co.id> for patch.

2003-10-13  Alexander Malysh  <a.malysh@centrium.de>
    * .cvsignore: added gw-config.h, gw-config.

2003-10-12  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsbox.c: various fixes/cleanups here and there.

2003-10-12  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_boxc.c: don't remove producer of incoming list if that is a global
      incoming list. Otherwise we have panic.
    * gw/urltrans.c: don't panic if msgdata == NULL in urltrans_find(...).
    * gw/shared.[ch]: made program_status var. volatile, because changed in the 
      signal handler and should not be cashed.

2003-10-12  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/thread.[ch]: added mutex_try_lock(...) function.

2003-10-12  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: make compiler happy.

2003-10-11  Alexander Malysh  <a.malysh@centrium.de>
    * gw/sms.c: hmm, seems some of us don't know, what a pointers are for :)

2003-10-11  Alexander Malysh  <a.malysh@centrium.de>
    * gw/dlr_sdb.c: fixed bug #87.

2003-10-10  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/http.c: removed unncessary convertion to upper case in function
      http_something_accepted(). That's why we have octstr_case_compare() for.

2003-10-09  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: fixed bug, that octstr was double freed.

2003-10-09  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/http.[ch]: changed http_something_accepted() routine in order to